server-spring/k8s/deployment-server-spring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-server
  template:
    metadata:
      labels:
        app: spring-server
    spec:
      containers:
        - name: spring-server
          image: server-spring:1.0.1
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 8080
            - name: ws
              containerPort: 9092
