server-spring/k8s/service-server-spring.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-server-service
spec:
  type: NodePort
  selector:
    app: spring-server
  ports:
    - name: http
      port: 8080
      targetPort: http
      nodePort: 30080
    - name: ws
      port: 9092
      targetPort: ws
      nodePort: 30092
